--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <body>
     <h1>Sub Domain</h1>
-    <a href="https://banguncenter.my.id
+    <a href="https://banguncenter.my.id>Home</a>
     <style>
       body {
-        color:blue;
+        bakcground-color:blue;
         
       }
     </style>
