--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html>
-  <body>
-    <h1>Sub Domain</h1>
-    <a href="https://banguncenter.my.id>Home</a>
+    <body>
+        <h1>Sub Domain</h1>
+        <a href="https://banguncenter.my.id>">Home</a>
     <style>
-      body {
-        bakcground-color:blue;
-        color:#FFF;
-        
-      }
+        body {
+            background-color:salmon;
+            color:#FFF;
+        }
     </style>
-  <body>
+    </body>
 </html>
