--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <h1>Sub Domain</h1>
-        <a href="https://banguncenter.my.id/>">Home</a>
+        <a href="https://banguncenter.my.id">Home</a>
     <style>
         body {
             background-color:salmon;
